add the conpany file & link of it

--- a/webhome-3/footer.html
+++ b/webhome-3/footer.html
@@ -24,7 +24,7 @@
   <a href="https://twitter.com/a5272745637572"><i class="fa-brands fa-square-twitter" style="font-size:80px;"></i></a>
   <a href="https://www.instagram.com/nitizyobenri/" target="_blank"><i class="fa-brands fa-square-instagram" style="font-size:80px;"></i></a>
   <div class="menu2">
-      <p>・運営会社</p>
+      <a href="company.html" target="_top"><p>・運営会社</p></a>
       <p>・プライバシーポリシー</p>
       <p>・お問い合わせ</p>
       <p>・利用規約</p>
