--- a/webhome-3/company.html
+++ b/webhome-3/company.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="css_folder\conpany.css"><!--css名変える-->
-        <title>title</title><!--1.タイトル-->
-        <meta name="description" content="sample"><!--2.説明文-->
-        <meta name="keywords" content="sample"><!--3.キーワード-->
+        <title>運営会社</title><!--1.タイトル-->
+        <meta name="description" content="このサイトを運営しているものについて"><!--2.説明文-->
+        <meta name="keywords" content="pacture, 運営会社"><!--3.キーワード-->
     </head>
     <body>
         <header>
@@ -17,37 +17,10 @@
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
-                <h1>title</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
-                <p>導入文</p>
-                <div class="table">
-                    <h1>もくじ</h1>
-                    <ul>
-                        <a href="#mo-1"><li>目次１</li></a>
-                        <a href="#mo-2"><li>目次２</li></a>
-                        <a href="#mo-3"><li>目次３</li></a>
-                        <a href="#mo-4"><li>目次４</li></a>
-                        <a href="#mo-5"><li>目次５</li></a>
-                        <a href="#mo-6"><li>目次６</li></a>
-                        <a href="#mo-7"><li>まとめ</li></a>
-                        <a href="#re-arti"><li>関連記事</li></a>
-                    </ul>
-                </div>
-                <h2 id="mo-1">目次１</h2>
-                <!--一つ目の項目--><!--小見出しはh3、その他はp-->
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-2">目次２</h2>
-                <!--二つ目の項目-->
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-3">目次３</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-4">目次４</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-5">目次５</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-6">目次６</h2>
-                <h2 id="mo-7">まとめ</h2>
-                <img class="free_img" src="#">
+                <h1>運営会社</h1>
+                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
+                <h2>この会社について</h2>
+                <p>作成中です</p>
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
                     <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
