--- a/webhome-3/footer.html
+++ b/webhome-3/footer.html
@@ -21,7 +21,7 @@
       </div> 
   </div>
   <img class="logo2" src="img/Pac.png">
-  <a href="https://twitter.com/a5272745637572"><i class="fa-brands fa-square-twitter" style="font-size:80px;"></i></a>
+  <a href="https://twitter.com/a5272745637572" target="_blank"><i class="fa-brands fa-square-twitter" style="font-size:80px;"></i></a>
   <a href="https://www.instagram.com/nitizyobenri/" target="_blank"><i class="fa-brands fa-square-instagram" style="font-size:80px;"></i></a>
   <div class="menu2">
       <a href="company.html" target="_top"><p>・運営会社</p></a>
