--- a/webhome-3/movie4.html
+++ b/webhome-3/movie4.html
@@ -18,7 +18,7 @@
             </div>
             <div class="arti">
                 <h1>title</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
+                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/**/30</p>
                 <p>導入文</p>
                 <div class="table">
                     <h1>もくじ</h1>
