delete "!" add private file

--- a/webhome-3/footer.html
+++ b/webhome-3/footer.html
@@ -25,7 +25,7 @@
   <a href="https://www.instagram.com/nitizyobenri/" target="_blank"><i class="fa-brands fa-square-instagram" style="font-size:80px;"></i></a>
   <div class="menu2">
       <a href="company.html" target="_top"><p>・運営会社</p></a>
-      <p>・プライバシーポリシー</p>
+      <a href="private.html" target="_top"><p>・プライバシーポリシー</p></a>
       <p>・お問い合わせ</p>
       <p>・利用規約</p>
       <p>・ロゴ/バナー</p>
