changed copy rights. added the icon. changed private.html and css to complete.

--- a/webhome-3/footer.html
+++ b/webhome-3/footer.html
@@ -31,6 +31,6 @@
       <p>・ロゴ/バナー</p>
       <p>・広告掲載のご相談</p>
   </div>
-  <p>©; dalycity. 2023.</p>
+  <p>©; 2023. pacture</p>
   </body>
 </html>
