deleted the margin of the right zone.

--- a/webhome-3/index.html
+++ b/webhome-3/index.html
@@ -12,6 +12,7 @@
         <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -80,5 +81,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
