--- a/webhome-3/templete.html
+++ b/webhome-3/templete.html
@@ -9,6 +9,7 @@
         <meta name="keywords" content="sample"><!--3.キーワード-->
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -78,5 +79,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
