added icon in all files. deleted the right space.

--- a/webhome-3/cleaner.html
+++ b/webhome-3/cleaner.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="css_folder/cleaner.css">
+    <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
+      <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+      <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
   </head>
   <body>
     <br>
