--- a/webhome-3/fan.html
+++ b/webhome-3/fan.html
@@ -7,8 +7,12 @@
         <title>【2023年版】おすすめの手軽に持ち運べる省エネ扇風機5選!</title>
         <meta name="description" content="エアコン代を節約したい！熱中症対策をしたい！などの方に向けておすすめの商品を紹介していきます！">
         <meta name="keywords" content="扇風機, 夏, 電気代, 節約, エアコン, クーラー, 暑い, 涼しく">
+        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -202,5 +206,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
