--- a/webhome-3/movie1.html
+++ b/webhome-3/movie1.html
@@ -7,8 +7,12 @@
         <title>>週末に観るべき映画 5選!!</title><!--1.タイトル-->
         <meta name="description" content="皆さんは平日に働いて疲れ、休日には趣味を楽しんでいることでしょう。しかし、映画選びを失敗してしまうこともあるかもしれません。この記事では、女性と見るのに適した映画や家族で感動できる映画など、さまざまな場面で楽しめる映画を紹介します。映画好きの方には既に知られた作品もあるかもしれませんが、次回の記事もお楽しみに！"><!--2.説明文-->
         <meta name="keywords" content="movie"><!--3.キーワード-->
+        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -113,5 +117,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
