--- a/webhome-3/movie2.html
+++ b/webhome-3/movie2.html
@@ -7,8 +7,12 @@
         <title>週末に観るべき映画第2弾 5選!!</title><!--1.タイトル-->
         <meta name="description" content="現在巷で有名である広告などが一切ない『君たちはどう生きるか』みなさんご覧になりましたか？僕自身もいまだに見れていないので期間中に絶対見に行きたいと思っています。"><!--2.説明文-->
         <meta name="keywords" content="movie"><!--3.キーワード-->
+        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -100,5 +104,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
