--- a/webhome-3/washing.html
+++ b/webhome-3/washing.html
@@ -7,8 +7,12 @@
         <title>【2023年版】洗濯機で何を買えばいいのかわからない人は必見!!</title><!--1.タイトル-->
         <meta name="description" content="一人暮らしや引越しで洗濯機を新調するとき、買うべき洗濯機が分からない人に向けて、洗濯機のことを1から10まで説明します！"><!--2.説明文-->
         <meta name="keywords" content="洗濯, 洗濯機, 夏, 汗, 清潔, 布団"><!--3.キーワード-->
+        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -212,5 +216,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
