--- a/webhome-3/ANIME.html
+++ b/webhome-3/ANIME.html
@@ -7,8 +7,12 @@
         <title>日常・趣味・便利グッズ紹介サイト</title>
         <meta name="description" content="今流行りの映画やアニメ、便利な日用品、受験勉強用の教材について紹介しています！">
         <meta name="keywords" content="映画, アニメ, 日用品, 参考書, 日常, 参政党">
+        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -58,5 +62,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
