--- a/webhome-3/company.html
+++ b/webhome-3/company.html
@@ -7,8 +7,12 @@
         <title>運営会社</title><!--1.タイトル-->
         <meta name="description" content="このサイトを運営しているものについて"><!--2.説明文-->
         <meta name="keywords" content="pacture, 運営会社"><!--3.キーワード-->
+        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -51,5 +55,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
