--- a/webhome-3/whisky.html
+++ b/webhome-3/whisky.html
@@ -7,8 +7,12 @@
         <title>【飲みやすい！】初心者におすすめの2000円代ウイスキー 5選</title><!--1.タイトル-->
         <meta name="description" content="2023年最新! 初心者でも飲めるおすすめのウイスキーを5つ厳選しました! お酒を選ぶ時の参考にしてみてください!"><!--2.説明文-->
         <meta name="keywords" content="お酒, ウイスキー, アルコール, 20歳, 酒"><!--3.キーワード-->
+        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -222,5 +226,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
