--- a/webhome-3/OVEN.html
+++ b/webhome-3/OVEN.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css_folder/cleaner.css">
-    <title>【2023年版】掃除機で何を買えばいいのかわからない人は必見!!</title>
-    <meta name="description" content="一人暮らしや引越しで掃除機を新調するとき、買うべき掃除機が分からない人に向けて、掃除機のことを1から10まで説明します！">
-    <meta name="keywords" content="掃除, 掃除機, 夏, 汚れ, 清潔, 布団, ルンバ">
+    <title>【2023年版】電子レンジで何を買えばいいのかわからない人は必見!!</title>
+    <meta name="description" content="一人暮らしや引越しで電子レンジを新調するとき、オススメの電子レンジを紹介します！">
+    <meta name="keywords" content="電子レンジ, オーブンレンジ, 単機能レンジ, 冷凍, 解凍, 温め, レンチン料理">
   </head>
   <body>
     <header>
@@ -17,66 +17,67 @@
         <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
       </div>
       <div class="arti">
-        <h1>【2023年版】掃除機で何を買えばいいのかわからない人は必見!!</h1>
+        <h1>【2023年版】電子レンジで何を買えばいいのかわからない人は必見!!</h1>
         <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
         <p>急ですがこの記事を見ているということは家電のことがあまり詳しくなかったり、</p>
         <p>一人暮らしや新生活を始めたけどどうすればいいのかわからない人が多いと思います。</p>
-        <p>なのでそんな皆さんに今回はオススメの掃除機の紹介をしたいと思います。</p>
+        <p>なのでそんな皆さんに今回はオススメの電子レンジの紹介をしたいと思います。</p>
         <p>是非参考にしてくださいね！</p>
         <div class="table">
           <h1>もくじ</h1>
           <ul>
-            <a href="#mo-1"><li>モダンデコ コードレス掃除機 9,998円(税込)</li></a>
-            <a href="#mo-2"><li>マキタ コードレス掃除機  15,730円(税込)</li></a>
-            <a href="#mo-3"><li>アイロボット ルンバi2 29,800円(税込)</li></a>
-            <a href="#mo-4"><li>日立 サイクロン掃除機 18,000円(税込)</li></a>
-            <a href="#mo-5"><li>ECOVACS ロボット掃除機 85,000円(税込)</li></a>
+            <a href="#mo-1"><li>アイリスオーヤマ 電子レンジ 8,980円(税込)</li></a>
+            <a href="#mo-2"><li>SHARP オーブンレンジ  29,800円(税込)</li></a>
+            <a href="#mo-3"><li>日立 スチームオーブンレンジ 31,400円(税込)</li></a>
+            <a href="#mo-4"><li>東芝 過熱水蒸気オーブンレンジ 59,445円(税込)</li></a>
+            <a href="#mo-5"><li>YAMAZEN スチームオーブンレンジ 19,800円(税込)</li></a>
             <a href="#mo-6"><li>まとめ</li></a>
             <a href="#re-arti"><li>関連記事</li></a>
           </ul>
         </div>
-        <h2 id="mo-1">1.モダンデコ コードレス掃除機 9,998円(税込)</h2>
-        <p>この掃除機は1家に1台は欲しいシンプルな掃除機！</p>
-        <p>コードレスの掃除機でありながら</p>
-        <p>クリーニングブラシまで付いていて</p>
-        <p>長持ちするバッテリーなので使いやすい！</p>
+        <h2 id="mo-1">1.アイリスオーヤマ 電子レンジ 8,980円(税込)</h2>
+        <p>この電子レンジは1家に1台は欲しいシンプルな電子レンジ！</p>
+        <p>普通の電子レンジでありながら</p>
+        <p>3段階出力の機能が付いていて</p>
+        <p>操作方法もシンプルなので使いやすい！</p>
         <p>さらにミニマリストにはたまらないシンプルさ</p> 
-        <p>と可愛さがあり、カラーバリエーションも豊富で</p>
+        <p>でインテリアにも馴染むデザインで</p>
         <p>コスパも良くとてもオススメです！</p>
         <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
-        <h2 id="mo-2">2.マキタ コードレス掃除機  15,730円(税込)</h2>
-        <p>次は掃除機では有名なマキタの掃除機！</p>
-        <p>こちらもコードレスの掃除機です</p>
-        <p>この掃除機の良いところは紙パック式ということ</p>
-        <p>紙パック式なのでゴミが溜まったらすぐに捨てて新しい紙パックと</p>
-        <p>交換すればいいだけなのでこの掃除機もシンプルに使いやすくて</p>
+        <h2 id="mo-2">2.SHARP オーブンレンジ  29,800円(税込)</h2>
+        <p>次は有名なSHARP社のオーブンレンジ！</p>
+        <p>こちらのオーブンレンジのすごい点はオーブンレンジなのに</p>
+        <p>単機能レンジの機能も付いているところです</p>
+        <p>オーブンの機能がメインでありながらレンチン</p>
+        <p>などもできてしまうのでシンプルに使いやすくて</p>
         <p>オススメです！</p>
         <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
-        <h2 id="mo-3">3.アイロボット ルンバi2 29,800円(税込)</h2>
-        <p>続いてはルンバの紹介です！</p>
-        <p>このアイロボット社のルンバは性能的にも値段的にも最高の</p>
-        <p>ルンバだと思います！</p>
-        <p>しかも期間限定セールで安くなってるから買う方は急いで！</p>
-        <p>（もうセールが終わっている場合もあるのでご了承ください）</p>
+        <h2 id="mo-3">3.日立 スチームオーブンレンジ 31,400円(税込)</h2>
+        <p>続いては過熱水蒸気スチームオーブンレンジの紹介です！</p>
+        <p>このレンジのすごいところはなんといっても</p>
+        <p>オートでの調理とその大きさを生かした2品同時温め！</p>
+        <p>オーブン、冷凍、焼き物やみずみずしい野菜まで調理できちゃう！</p>
+        <p>そんな夢のような機能をぜひ実感してみてはいかがでしょうか！</p>
         <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
-        <h2 id="mo-4">4.日立 サイクロン掃除機 18,000円(税込)</h2>
-        <p>こちらはキャニスター型の掃除機です！</p>
-        <p>キャニスター掃除機は基本的に吸引力がすごい</p>
-        <p>のですがこの掃除機はそれだけでなくライトニングコスト</p>
-        <p>がかからないので便利で使いやすいのでキャニスター掃除機</p>
-        <p>の中だとものすごくオススメの掃除機です！</p>
+        <h2 id="mo-4">4.東芝 過熱水蒸気オーブンレンジ 59,445円(税込)</h2>
+        <p>こちらは東芝社の過熱水蒸気オーブンレンジです</p>
+        <p>このレンジの特異な点は高火力というところ！</p>
+        <p>さらにダブルセンサーで検知してから温めるので</p>
+        <p>一番美味しい状態で温めてくれるのも強みです！</p>
+        <p>このレンジも他のレンジと引けを取らないくらい</p>
+        <p>ものすごくオススメの過熱水蒸気オーブンレンジです！</p>
         <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
-        <h2 id="mo-5">5.ECOVACS ロボット掃除機 85,000円(税込)</h2>
-        <p>この掃除機はルンバの仲間なのですが</p>
-        <p>ルンバの中でも性能が飛び抜けてすごい！</p>
-        <p>何がすごいかってゴミを吸いながら水も出して床を</p>
-        <p>拭いてくれるところです！これは手間が省けるので</p>
-        <p>使っていてすごく効率がよく自分の労力も減るので</p>
-        <p>楽なので是非買って使いやすさを実感してください！</p>
+        <h2 id="mo-5">5.YAMAZEN スチームオーブンレンジ 19,800円(税込)</h2>
+        <p>このレンジはシンプルなスチームオーブンレンジです</p>
+        <p>ですがスチームなので蒸し料理が作れるのが強み！</p>
+        <p>さらにオートメニューの種類も多くて操作も簡単なので</p>
+        <p>コスパのことなども考えて最初のレンジには持って来いな</p>
+        <p>スチームオーブンレンジです！</p>
+        <p>是非買って使いやすさを実感してください！</p>
         <a href="https://hb.afl.rakuten.co.jp/ichiba/335ce6c7.3ec8bdcb.335ce6c8.982dd0ec/?pc=https%3A%2F%2Fproduct.rakuten.co.jp%2Fproduct%2F-%2Fa809e8d379346c175223634c774f3e89%2F&link_type=text&ut=eyJwYWdlIjoiaXRlbSIsInR5cGUiOiJ0ZXh0Iiwic2l6ZSI6IjY0eDY0IiwibmFtIjoxLCJuYW1wIjoicmlnaHQiLCJjb20iOjEsImNvbXAiOiJkb3duIiwicHJpY2UiOjAsImJvciI6MSwiY29sIjoxLCJiYnRuIjoxLCJwcm9kIjoxLCJhbXAiOmZhbHNlfQ%3D%3D" target="_blank" rel="nofollow sponsored noopener" style="word-wrap:break-word;"  >楽天で見る  ></a>
         <h2 id="mo-6">まとめ</h2>
         <p>いかがでしたか？</p>
-        <p>今回はオススメの掃除機を様々な種類や用途に合わせて5種類紹介しました！</p>
+        <p>今回はオススメの電子レンジを様々な種類や用途に合わせて5種類紹介しました！</p>
         <p>皆さんが買ってその性能を堪能してくれたら嬉しいです！</p>
         <p>リンクから買って頂けるとものすごく嬉しいので是非お願いします！</p>
         <p>ご覧頂きありがとうございました！</p>
