--- a/webhome-3/ANIME.html
+++ b/webhome-3/ANIME.html
@@ -27,7 +27,7 @@
             </div>
             <div class="main3">
                 <img src="img/sen.jpg">
-                <h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1>
+                <h1><a href="washing.html">おすすめ洗濯機5選!!!!</a></h1>
             </div>
         </div>
         <div class="main-body">
