--- a/webhome-3/footer.html
+++ b/webhome-3/footer.html
@@ -31,7 +31,7 @@
       <a href="private.html" target="_top"><p>・プライバシーポリシー</p></a>
       <a href="inquiry.html" target="_top"><p>・お問い合わせ</p></a>
       <a href="qa.html" target="_top"><p>・Q&A</p></a>
-      <p>・利用規約</p>
+      <a href="qa.html" target="_top"><p>・利用規約</p></a>
       <p>・ロゴ/バナー</p>
       <p>・広告掲載のご相談</p>
   </div>
