completed under menu

--- a/webhome-3/private.html
+++ b/webhome-3/private.html
@@ -23,8 +23,8 @@
             <div class="arti">
                 <h1>プライバシーポリシー</h1>
                 <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
-                <h2 id="mo-1">【pacture】 プライバシーポリシー</h2>
-                <p>pacture（以下,「当社」といいます。）は,本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。</p>
+                <h2 id="mo-1">【Pacture】 プライバシーポリシー</h2>
+                <p>Pacture（以下,「当社」といいます。）は,本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。</p>
                 <h3 id="mo-2">第1条（個人情報）</h3>
                 <p>「個人情報」とは，個人情報保護法にいう「個人情報」を指すものとし，生存する個人に関する情報であって，当該情報に含まれる氏名，生年月日，住所，電話番号，連絡先その他の記述等により特定の個人を識別できる情報及び容貌，指紋，声紋にかかるデータ，及び健康保険証の保険者番号などの当該情報単体から特定の個人を識別できる情報（個人識別情報）を指します。</p>
                 <h3 id="mo-3">第2条（個人情報の収集方法）</h3>
