--- a/webhome-3/ad.html
+++ b/webhome-3/ad.html
@@ -21,7 +21,7 @@
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
-                <h1>Q&A</h1>
+                <h1>広告掲載のご相談</h1>
                 <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
                 <p>ただいま作成中です</p>
                 <h2 id="re-arti">関連記事</h2>
