--- a/webhome-3/footer.html
+++ b/webhome-3/footer.html
@@ -31,9 +31,9 @@
       <a href="private.html" target="_top"><p>・プライバシーポリシー</p></a>
       <a href="inquiry.html" target="_top"><p>・お問い合わせ</p></a>
       <a href="qa.html" target="_top"><p>・Q&A</p></a>
-      <a href="qa.html" target="_top"><p>・利用規約</p></a>
-      <p>・ロゴ/バナー</p>
-      <p>・広告掲載のご相談</p>
+      <a href="terms.html" target="_top"><p>・利用規約</p></a>
+      <a href="logo.html" target="_top"><p>・ロゴ/バナー</p></a>
+      <a href="ad.html" target="_top"><p>・広告掲載のご相談</p></a>
   </div>
   <p>©; 2023. pacture</p>
   </body>
