--- a/webhome-3/logo.html
+++ b/webhome-3/logo.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/ad.css"><!--css名変える-->
+        <link rel="stylesheet" href="css_folder/logo.css"><!--css名変える-->
         <title>title</title><!--1.タイトル-->
         <meta name="description" content="sample"><!--2.説明文-->
         <meta name="keywords" content="sample"><!--3.キーワード-->
@@ -21,9 +21,10 @@
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
-                <h1>Q&A</h1>
+                <h1>ロゴ / バナー</h1>
                 <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
-                <p>ただいま作成中です</p>
+                <h2>ロゴについて</h2>
+                <img class="logo2" src="img\Pac.png">
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
                     <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
