--- a/webhome-3/header.html
+++ b/webhome-3/header.html
@@ -10,5 +10,10 @@
         <img src="img/Pac.png">
     </a>
     <h1><form><input type="search" class="search" placeholder="検索"></form></h1>
+    <!--
+        <script async src="https://cse.google.com/cse.js?cx=9180e843fe52543fe">
+        </script>
+        <div class="gcse-search"></div>
+    -->
 </body>
 </html>
