--- a/webhome-3/templete.html
+++ b/webhome-3/templete.html
@@ -40,6 +40,7 @@
                 <h2 id="mo-1">目次１</h2>
                 <!--一つ目の項目--><!--小見出しはh3、その他はp-->
                 <a href="#" class="link">楽天市場で見る   ></a>
+                <!--#をURLに変え、400×400の画像リンクを上に貼る-->
                 <h2 id="mo-2">目次２</h2>
                 <!--二つ目の項目-->
                 <a href="#" class="link">楽天市場で見る   ></a>
