changed the form of directory

--- a/webhome-3/header.html
+++ b/webhome-3/header.html
@@ -9,11 +9,27 @@
     <a href="index.html" target="_top">
         <img src="img/Pac.png">
     </a>
-    <h1><form><input type="search" class="search" placeholder="検索"></form></h1>
+    <h1>
+        <form action="search.html" method="get" target="_top">
+            <input type="search" name="search" class="search" placeholder="キーワード">
+            <input type="submit" class="search_" value="検索">
+        </form> 
+    </h1>
+
+
     <!--
+
         <script async src="https://cse.google.com/cse.js?cx=9180e843fe52543fe">
         </script>
         <div class="gcse-search"></div>
+
+        <form action="http://pacture.jp/" method="get">
+            <input type="search" name="search" placeholder="キーワードを入力">
+            <input type="submit" name="submit" value="検索">
+        </form>
+
     -->
+
+
 </body>
 </html>
