changed the form of directory : 2

--- a/webhome-3/html_folder/cleaner.html
+++ b/webhome-3/html_folder/cleaner.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="css_folder/cleaner.css">
+    <link rel="stylesheet" href="../css_folder/cleaner.css">
     <title>【2023年版】掃除機で何を買えばいいのかわからない人は必見!!</title>
     <meta name="description" content="一人暮らしや引越しで掃除機を新調するとき、買うべき掃除機が分からない人に向けて、掃除機のことを1から10まで説明します！">
     <meta name="keywords" content="掃除, 掃除機, 夏, 汚れ, 清潔, 布団, ルンバ">
@@ -18,7 +18,7 @@
       </div>
       <div class="arti">
         <h1>【2023年版】掃除機で何を買えばいいのかわからない人は必見!!</h1>
-        <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
+        <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
         <p>急ですがこの記事を見ているということは家電のことがあまり詳しくなかったり、</p>
         <p>一人暮らしや新生活を始めたけどどうすればいいのかわからない人が多いと思います。</p>
         <p>なのでそんな皆さんに今回はオススメの掃除機の紹介をしたいと思います。</p>
@@ -83,19 +83,19 @@
         <h2 id="re-arti">関連記事</h2>
         <div class="arti-list">
           <div class="arti-1">
-            <div><img src="img/sen.jpeg"></div>
+            <div><img src="../img/sen.jpeg"></div>
             <div><h1><a href="cleaner.html">おすすめ扇風機5選!!!</a></h1></div>
           </div>
           <div class="arti-1">
-            <div><img src="img/alcohol.jpg"></div>
+            <div><img src="../img/alcohol.jpg"></div>
             <div><h1><a href="cleaner.html">おすすめウイスキー5選!!!</a></h1></div>
           </div>
           <div class="arti-1">
-            <div><img src="img/movie1/samune1.jpg"></div>
+            <div><img src="../img/movie1/samune1.jpg"></div>
             <div><h1><a href="cleaner.html">おすすめ映画5選!!!</a></h1></div>
           </div>
           <div class="arti-1">
-            <div><img src="img/movie1/samune2.jpg"></div>
+            <div><img src="../img/movie1/samune2.jpg"></div>
             <div><h1><a href="cleaner.html">おすすめ映画5選第2弾!!!</a></h1></div>
           </div>
         </div> 
