--- a/webhome-3/html_folder/company.html
+++ b/webhome-3/html_folder/company.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>運営会社</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
+                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
                 <h2>この会社について</h2>
                 <p>作成中です</p>
                 <h2 id="re-arti">関連記事</h2>
@@ -31,7 +31,7 @@
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                         <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                         <div class="arti-1">
-                            <div><img src="img/sen.jpeg"></div>
+                            <div><img src="../img/sen.jpeg"></div>
                             <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
@@ -39,11 +39,11 @@
                             <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/uiui.jpg"></div>
+                            <div><img src="../img/uiui.jpg"></div>
                             <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/movie1/samune1.jpg"></div>
+                            <div><img src="../img/movie1/samune1.jpg"></div>
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
                 </div>
