changed the path.

--- a/webhome-3/html_folder/CONVENIENCE.html
+++ b/webhome-3/html_folder/CONVENIENCE.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/convinience.css">
+        <link rel="stylesheet" href="../css_folder/convinience.css">
         <title>日常・趣味・便利グッズ紹介サイト</title>
         <meta name="description" content="今流行りの映画やアニメ、便利な日用品、受験勉強用の教材について紹介しています！">
         <meta name="keywords" content="映画, アニメ, 日用品, 参考書, 日常, 参政党">
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
         <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
     </head>
     <body>
