--- a/webhome-3/html_folder/index.html
+++ b/webhome-3/html_folder/index.html
@@ -22,11 +22,11 @@
                 <h1><a href="fan.html">おすすめ扇風機5選!!!</a></h1>
             </div>
             <div class="main2">
-                <img src="img/uiui.jpg">
+                <img src="../img/uiui.jpg">
                 <h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1>
             </div>
             <div class="main3">
-                <img src="img/sen.jpg">
+                <img src="../img/sen.jpg">
                 <h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1>
             </div>
         </div>
@@ -39,7 +39,7 @@
                 <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                 <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                 <div class="arti-1">
-                    <div><img src="img/sen.jpeg"></div>
+                    <div><img src="../img/sen.jpeg"></div>
                     <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
@@ -47,11 +47,11 @@
                     <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                 </div>
                 <div class="arti-1">
-                    <div><img src="img/uiui.jpg"></div>
+                    <div><img src="../img/uiui.jpg"></div>
                     <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
-                    <div><img src="img/movie1/samune1.jpg"></div>
+                    <div><img src="../img/movie1/samune1.jpg"></div>
                     <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                 </div>
                 <a href="https://px.a8.net/svt/ejp?a8mat=3T22ZC+2HWH4I+50+2HK8J5" rel="nofollow">
@@ -61,11 +61,11 @@
                     <img border="0" width="100" height="60" alt="" src="https://www22.a8.net/svt/bgt?aid=230814277174&wid=001&eno=01&mid=s00000015695005014000&mc=1"></a>
                     <img border="0" width="1" height="1" src="https://www15.a8.net/0.gif?a8mat=3TF5FP+2VLG1E+3D3Q+TUO9T" alt="">
                 <div class="arti-1">
-                    <div><img src="img/movie1/samune2.jpg"></div>
+                    <div><img src="../img/movie1/samune2.jpg"></div>
                     <div><h1><a href="movie2.html">おすすめ映画5選第2弾!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
-                    <div><img src="img/sen.jpg"></div>
+                    <div><img src="../img/sen.jpg"></div>
                     <div><h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1></div>
                 </div>
                 <div class="ad-1">
