changed the path.

--- a/webhome-3/html_folder/CONVENIENCE.html
+++ b/webhome-3/html_folder/CONVENIENCE.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="映画, アニメ, 日用品, 参考書, 日常, 参政党">
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
@@ -18,15 +18,15 @@
         </header>
         <div class="main-arti">
             <div class="main1">
-                <img src="img/sen.jpeg">
+                <img src="../img/sen.jpeg">
                 <h1><a href="fan.html">おすすめ扇風機5選!!!</a></h1>
             </div>
             <div class="main2">
-                <img src="img/uiui.jpg">
+                <img src="../img/uiui.jpg">
                 <h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1>
             </div>
             <div class="main3">
-                <img src="img/sen.jpeg">
+                <img src="../img/sen.jpeg">
                 <h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1>
             </div>
         </div>
@@ -36,11 +36,11 @@
             </div>
             <div class="arti-list">
                 <div class="arti-1">
-                    <div><img src="img/sen.jpeg"></div>
+                    <div><img src="../img/sen.jpeg"></div>
                     <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
-                    <div><img src="img/sen.jpg"></div>
+                    <div><img src="../img/sen.jpg"></div>
                     <div><h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1></div>
                 </div>
                 <div class="ad-1">
