changed the Path.

--- a/webhome-3/html_folder/MOVIE.html
+++ b/webhome-3/html_folder/MOVIE.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/movie.css">
+        <link rel="stylesheet" href="../css_folder/movie.css">
         <title>日常・趣味・便利グッズ紹介サイト</title>
         <meta name="description" content="今流行りの映画やアニメ、便利な日用品、受験勉強用の教材について紹介しています！">
         <meta name="keywords" content="映画, アニメ, 日用品, 参考書, 日常, 参政党">
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/alcohol.jpg" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
@@ -18,15 +18,15 @@
         </header>
         <div class="main-arti">
             <div class="main1">
-                <img src="img/movie1/samune1.jpg">
+                <img src="../img/movie1/samune1.jpg">
                 <h1><a href="movie1.html">おすすめ映画5選!!!</a></h1>
             </div>
             <div class="main2">
-                <img src="img/movie1/samune2.jpg">
+                <img src="../img/movie1/samune2.jpg">
                 <h1><a href="movie2.html">おすすめ映画5選第2弾!!!</a></h1>
             </div>
             <div class="main3">
-                <img src="img/sen.jpg">
+                <img src="../img/sen.jpg">
                 <h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1>
             </div>
         </div>
@@ -36,11 +36,11 @@
             </div>
             <div class="arti-list">
                 <div class="arti-1">
-                    <div><img src="img/movie1/samune1.jpg"></div>
+                    <div><img src="../img/movie1/samune1.jpg"></div>
                     <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
-                    <div><img src="img/movie1/samune2.jpg"></div>
+                    <div><img src="../img/movie1/samune2.jpg"></div>
                     <div><h1><a href="movie2.html">おすすめ映画5選第2弾!!!</a></h1></div>
                 </div>
                 <div class="ad-1">
