--- a/webhome-3/html_folder/DRR.html
+++ b/webhome-3/html_folder/DRR.html
@@ -3,12 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/DRR.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/DRR.css"><!--css名変える-->
         <title>【2023年度版】最新のおすすめ防災グッズ5選！！</title><!--1.タイトル-->
         <meta name="description" content="最新の防災グッズです！コンパクトで役に立つものを紹介しますのでぜひ手に取ってみてください！"><!--2.説明文-->
         <meta name="keywords" content="防災、戦争、地震、土砂災害、噴火、津波、南海トラフ地震、台湾有事"><!--3.キーワード-->
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
+    <div class="wrap">
         <header>
             <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </header>
@@ -18,7 +22,7 @@
             </div>
             <div class="art">
                 <h1>【2023年度版】最新のおすすめ防災グッズ！！</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/09/20</p>
+                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/20</p>
                 <p>最近、色々物騒ですよね。。。</p>
                 <p>南海トラフ地震が来るのではないかと言われていたり、異常気象による豪雨に豪雨や土砂災害など何かと身近に危険が迫っていますよね！？</p>
                 <p>そんなときのために備えておく必要がありますよね！？家族や大切な人、自分を守るためにとても必要なことだと思います。</p>
@@ -47,7 +51,7 @@
                     </ul>
                 </div>
                 <h2 id="mo-0">災害用具ってどれくらいもてばいいの？~一人暮らし編~</h2>
-                <img src="img/DRR.jpg" class="img">
+                <img src="../img/DRR.jpg" class="img">
                 <h3>緊急時に逃げる時に大きな荷物を持ち運びながら避難することは難しいですし、下手すると逃げ遅れてしまいますよね？</h3>
                 <p>なので今回は適切な災害道具の量について説明していきます！</p>
                 <p>一般的には<span class="under1">三日分の備蓄品</span>があれば良いとされています。</p>
@@ -130,7 +134,7 @@
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                         <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                         <div class="arti-1">
-                            <div><img src="img/sen.jpeg"></div>
+                            <div><img src="../img/sen.jpeg"></div>
                             <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
@@ -138,11 +142,11 @@
                             <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/uiui.jpg"></div>
+                            <div><img src="../img/uiui.jpg"></div>
                             <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/movie1/samune1.jpg"></div>
+                            <div><img src="../img/movie1/samune1.jpg"></div>
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
                 </div>
@@ -154,5 +158,6 @@
         <footer>
             <iframe src="footer.html" scrolling="no" frameborder="no" width="100%"></iframe>
         </footer>
+    </div>
     </body>
 </html>
