--- a/webhome-3/html_folder/OVEN.html
+++ b/webhome-3/html_folder/OVEN.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="css_folder/cleaner.css">
+    <link rel="stylesheet" href="../css_folder/OVEN.css">
     <title>【2023年版】電子レンジで何を買えばいいのかわからない人は必見!!</title>
     <meta name="description" content="一人暮らしや引越しで電子レンジを新調するとき、オススメの電子レンジを紹介します！">
     <meta name="keywords" content="電子レンジ, オーブンレンジ, 単機能レンジ, 冷凍, 解凍, 温め, レンチン料理">
+    <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+    <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
   </head>
   <body>
+  <div class="wrap">
     <header>
       <iframe src="header.html" scrolling="no" frameborder="no" width="100%"></iframe>
     </header>
@@ -18,7 +22,7 @@
       </div>
       <div class="arti">
         <h1>【2023年版】電子レンジで何を買えばいいのかわからない人は必見!!</h1>
-        <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
+        <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
         <p>急ですがこの記事を見ているということは家電のことがあまり詳しくなかったり、</p>
         <p>一人暮らしや新生活を始めたけどどうすればいいのかわからない人が多いと思います。</p>
         <p>なのでそんな皆さんに今回はオススメの電子レンジの紹介をしたいと思います。</p>
@@ -84,19 +88,19 @@
         <h2 id="re-arti">関連記事</h2>
         <div class="arti-list">
           <div class="arti-1">
-            <div><img src="img/sen.jpeg"></div>
+            <div><img src="../img/sen.jpeg"></div>
             <div><h1><a href="cleaner.html">おすすめ扇風機5選!!!</a></h1></div>
           </div>
           <div class="arti-1">
-            <div><img src="img/alcohol.jpg"></div>
+            <div><img src="../img/alcohol.jpg"></div>
             <div><h1><a href="cleaner.html">おすすめウイスキー5選!!!</a></h1></div>
           </div>
           <div class="arti-1">
-            <div><img src="img/movie1/samune1.jpg"></div>
+            <div><img src="../img/movie1/samune1.jpg"></div>
             <div><h1><a href="cleaner.html">おすすめ映画5選!!!</a></h1></div>
           </div>
           <div class="arti-1">
-            <div><img src="img/movie1/samune2.jpg"></div>
+            <div><img src="../img/movie1/samune2.jpg"></div>
             <div><h1><a href="cleaner.html">おすすめ映画5選第2弾!!!</a></h1></div>
           </div>
         </div> 
@@ -111,6 +115,6 @@
     <br>
     <br>
     <br>
-    
+  </div>
   </body>
 </html>
