--- a/webhome-3/html_folder/fan.html
+++ b/webhome-3/html_folder/fan.html
@@ -7,9 +7,9 @@
         <title>【2023年版】おすすめの手軽に持ち運べる省エネ扇風機5選!</title>
         <meta name="description" content="エアコン代を節約したい！熱中症対策をしたい！などの方に向けておすすめの商品を紹介していきます！">
         <meta name="keywords" content="扇風機, 夏, 電気代, 節約, エアコン, クーラー, 暑い, 涼しく">
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
@@ -23,7 +23,7 @@
             </div>
             <div class="arti">
                 <h1>【2023年版】おすすめの手軽に持ち運べる省エネ扇風機5選!!!</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
                 <p>いよいよ気温も上がってきてきましたね...。今年は電気代も大幅に上がってしまったので、エアコンを気軽に使うことができない!そんな人におすすめな手持ち扇風機を5個紹介しちゃいますのでぜひ最後まで見てくれると嬉しいです!</p>
                 <div class="table">
                     <h1>もくじ</h1>
@@ -152,7 +152,7 @@
                 <br>
                 <br>
                 <h2 id="fan-t">古い扇風機の片付け方は？</h2>
-                <img class="free_img" src="img/fan.jpg">
+                <img class="free_img" src="../img/fan.jpg">
                 <p>「粗大ゴミ」としてお住まいの自治体に回収してもらうことです！「粗大ゴミ」として捨てる時は事前に各自治体の粗大ゴミ受付センターに電話、もしくはインターネットで予約をしましょう！</p>
                 <br>
                 <br>
@@ -171,7 +171,7 @@
                 <br>
                 <br>
                 <h2 id="fan-s">まとめ</h2>
-                <img class="free_img" src="img/fan_cold.jpg">
+                <img class="free_img" src="../img/fan_cold.jpg">
                 <p>2023年おすすめの扇風機5選でした。電気代高騰などで色々苦しい時期ですがおしゃれにそして節約しながらこの夏を乗り越えましょう！</p>
                 <p>みなさまの扇風機選びの参考にしていただけると幸いです！</p>
                 <br>
@@ -182,7 +182,7 @@
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                         <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                         <div class="arti-1">
-                            <div><img src="img/sen.jpeg"></div>
+                            <div><img src="../img/sen.jpeg"></div>
                             <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
@@ -190,11 +190,11 @@
                             <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/uiui.jpg"></div>
+                            <div><img src="../img/uiui.jpg"></div>
                             <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/movie1/samune1.jpg"></div>
+                            <div><img src="../img/movie1/samune1.jpg"></div>
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
                 </div>
