--- a/webhome-3/html_folder/footer.html
+++ b/webhome-3/html_folder/footer.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/footer.css">
+        <link rel="stylesheet" href="../css_folder/footer.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
   </head>
   <body>
     <div class="de_main-menu">
       <div class="de_menu">
           <h1>
-              <img src="img/icon_1.png">
+              <img src="../img/icon_1.png">
               カテゴリー
           </h1>
           <ul>
@@ -23,7 +23,7 @@
           </ul>
       </div> 
   </div>
-  <img class="logo2" src="img/Pac.png">
+  <img class="logo2" src="../img/Pac.png">
   <a href="https://twitter.com/a5272745637572" target="_blank"><i class="fa-brands fa-square-twitter" style="font-size:80px;"></i></a>
   <a href="https://www.instagram.com/nitizyobenri/" target="_blank"><i class="fa-brands fa-square-instagram" style="font-size:80px;"></i></a>
   <div class="menu2">
