--- a/webhome-3/html_folder/header.html
+++ b/webhome-3/html_folder/header.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="css_folder/header.css">
+    <link rel="stylesheet" href="../css_folder/header.css">
 </head>
 <body>
     <a href="index.html" target="_top">
-        <img src="img/Pac.png">
+        <img src="../img/Pac.png">
     </a>
     <h1>
         <form action="search.html" method="get" target="_top">
