--- a/webhome-3/html_folder/leftmenu.html
+++ b/webhome-3/html_folder/leftmenu.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/leftmenu.css">
+        <link rel="stylesheet" href="../css_folder/leftmenu.css">
     </head>
   <body>
   <div class="main-menu">
     <div class="menu">
         <h1>
-            <img src="img/icon_1.png">
+            <img src="../img/icon_1.png">
             カテゴリー
         </h1>
         <ul>
