--- a/webhome-3/html_folder/movie2.html
+++ b/webhome-3/html_folder/movie2.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/movie2.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/movie2.css"><!--css名変える-->
         <title>週末に観るべき映画第2弾 5選!!</title><!--1.タイトル-->
         <meta name="description" content="現在巷で有名である広告などが一切ない『君たちはどう生きるか』みなさんご覧になりましたか？僕自身もいまだに見れていないので期間中に絶対見に行きたいと思っています。"><!--2.説明文-->
         <meta name="keywords" content="movie"><!--3.キーワード-->
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
@@ -22,8 +22,8 @@
             </div>
             <div class="arti">
                 <h1>週末に観るべき映画第2弾 5選!!</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
-                <img src="img\movie1\samune1.jpg" class="samune2">
+                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <img src="../img/movie1/samune1.jpg" class="samune2">
                 <p>現在巷で有名である広告などが一切ない『君たちはどう生きるか』みなさんご覧になりましたか？</p>
                 <p>僕自身もいまだに見れていないので期間中に絶対見に行きたいと思っています。</p>
                 <div class="table">
@@ -40,22 +40,22 @@
                 </div>
                 <h2 id="mo-1">1,あの有名漫画の実写化第3弾【キングダム 運命の炎】</h2>
                 <!--一つ目の項目--><!--小見出しはh3、その他はp-->
-                <img src="img\movie2\kin.jpeg" class="samune">
+                <img src="../img/movie2/kin.jpeg" class="samune">
                 <p>この映画は今年7月28日に公開されたあの超人気漫画「キングダム」の実写化映画第３弾であり、原作ファン全員が待ち侘びていた作品です。</p>
                 <p>大まかなあらすじは、主人公であり前作の活躍により百人将になった秦国の信が元秦国六大将軍の1人である王騎の元で修行を受けて、その成果を趙国との戦いで見せていくというものです。</p>
                 <p>僕は映画が終わるタイミングにびっくりしてもう終わっちゃたの？といった感じでした。</p>
                 <h2 id="mo-2">2,君膵に続いての胸キュン作品【君は月夜に光り輝く】</h2>
                 <!--二つ目の項目-->
-                <img src="img\movie2\kimiha.jpeg" class="samune2">
+                <img src="../img/movie2/kimiha.jpeg" class="samune2">
                 <p>この映画は「君の膵臓をたべたい」の主演でもあった永野芽郁と北村匠海、また監督でもあった月川翔により映画化されました。</p>
                 <p>大まかなあらすじは、不死の病である発光病に罹ってしまい寿命がもう長くない女子高校生の死ぬまでにやりたいけどできないことを、男子高校生が代わりに行いその体験動画を見せることによって女子高校生は人生の楽しみを見出した。しかし、死はもうすぐそこまで迫っていて…</p>
                 <h2 id="mo-3">3,さらばコンプレックス。【SING/シング】</h2>
-                <img src="img\movie2\sing.jpeg" class="samune3">
+                <img src="../img/movie2/sing.jpeg" class="samune3">
                 <p>この映画は動物が暮らす世界で、コンプレックスを抱えた動物たちが、シングつまり歌で自分の回りの世界を180度変えるために奮闘する話です。</p>
                 <p>コアラやゴリラ、ブタなどの多くの動物が自分の能力で世界を切り拓いていく感じが見ていて感動するポイントです。</p>
                 <p>次回作もあるので、ぜひ皆さんイッキ見しましょう！！</p>
                 <h2 id="mo-4">4,語り継がれるべき名作【TITANIC】</h2>
-                <img src="img\movie2\tita.jpeg" class="samune">
+                <img src="../img/movie2/tita.jpeg" class="samune">
                 <p>この映画は有名すぎて内容知っている人が多そうなので紹介するか迷いましたがやっぱり名作をまだ見ていない人へ届けたいと思い、紹介することにしました！</p>
                 <p>もちろん複数回見ている人にも楽しんで欲しいです。</p>
                 <p>大まかなあらすじは1912年4月14日の深夜、北大西洋で実際に起きた水難事故を映画化したものです。</p>
@@ -63,14 +63,14 @@
                 <p>またいろんな隠し要素が隠されており何度も何度も見返したい作品になっています。</p>
                 <p>もし一度も見たことがない人がいたら絶対にご覧ください！</p>
                 <h2 id="mo-5">5,顔は見えないけれどあなたが好き【きみの瞳が問いかけている】</h2>
-                <img src="img\movie2\kimino.jpeg" class="samune2">
+                <img src="../img/movie2/kimino.jpeg" class="samune2">
                 <p>この映画の大まかなあらすじはある日の不慮の事故によって目が見えなくなってしまった女性だが、悲観的になることなくすごく明るく振る舞っていた。</p>
                 <p>そんな女性はふとした勘違いで元キックボクサーの青年と出会う。</p>
                 <p>障害を気にせず明るく振る舞う彼女と青年はいつしか恋に落ちる。</p>
                 <p>しかし、彼女の身に起きた事故の内容を聞いた青年は間接的とはいえ、事故の原因が自分にあったと気づいてしまう。</p>
                 <p>彼女たちはいったいどうなってしまうのだろうか…</p>
                 <h2 id="mo-6">まとめ</h2>
-                <img src="img\movie1\samune2.jpg" class="samune2">
+                <img src="../img/movie1/samune2.jpg" class="samune2">
                 <p>今回も週末に観るべき名作を5つ紹介しました。</p>
                 <p>参考になりましたら幸いです。</p>
                 <p>次回の記事もお楽しみに！！</p>
@@ -80,7 +80,7 @@
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                         <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                         <div class="arti-1">
-                            <div><img src="img/sen.jpeg"></div>
+                            <div><img src="../img/sen.jpeg"></div>
                             <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
@@ -88,11 +88,11 @@
                             <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/uiui.jpg"></div>
+                            <div><img src="../img/uiui.jpg"></div>
                             <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/movie1/samune1.jpg"></div>
+                            <div><img src="../img/movie1/samune1.jpg"></div>
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
                 </div>
