--- a/webhome-3/html_folder/qa.html
+++ b/webhome-3/html_folder/qa.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/ad.css"><!--css名変える-->
-        <title>title</title><!--1.タイトル-->
+        <link rel="stylesheet" href="../css_folder/ad.css"><!--css名変える-->
+        <title>Q&A</title><!--1.タイトル-->
         <meta name="description" content="sample"><!--2.説明文-->
         <meta name="keywords" content="sample"><!--3.キーワード-->
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>Q&A</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
+                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
                 <p>ただいま作成中です</p>
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
@@ -30,7 +30,7 @@
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                         <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                         <div class="arti-1">
-                            <div><img src="img/sen.jpeg"></div>
+                            <div><img src="../img/sen.jpeg"></div>
                             <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
@@ -38,11 +38,11 @@
                             <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/uiui.jpg"></div>
+                            <div><img src="../img/uiui.jpg"></div>
                             <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/movie1/samune1.jpg"></div>
+                            <div><img src="../img/movie1/samune1.jpg"></div>
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
                 </div>
