--- a/webhome-3/html_folder/washing.html
+++ b/webhome-3/html_folder/washing.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/washing.css"><!--css名変える-->
+        <link rel="stylesheet" href="../css_folder/washing.css"><!--css名変える-->
         <title>【2023年版】洗濯機で何を買えばいいのかわからない人は必見!!</title><!--1.タイトル-->
         <meta name="description" content="一人暮らしや引越しで洗濯機を新調するとき、買うべき洗濯機が分からない人に向けて、洗濯機のことを1から10まで説明します！"><!--2.説明文-->
         <meta name="keywords" content="洗濯, 洗濯機, 夏, 汗, 清潔, 布団"><!--3.キーワード-->
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>【2023年版】洗濯機で何を買えばいいのかわからない人は必見!!</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
                 <p>夏になるとみんな汗かきますし、ムシムシとした暑さが続くので汗の匂いなどもあるしお布団とかも汗まみれになって何回も洗濯回しちゃいますよね。</p>
                 <p>なので1年を通して夏は人が最も洗濯機を回す季節なんです!</p>
                 <p>しかしそう簡単に買えるものでもないし買い換えるものでもないですよね。</p>
@@ -51,7 +51,7 @@
                 <p>・洗濯乾燥機</p>
                 <p>それぞれの特徴ですがを今から紹介していきます！</p>
                 <p>ドラム式洗濯機は、</p>
-                <img src="img/washing/doramu.jpg"class="samune">
+                <img src="../img/washing/doramu.jpg"class="samune">
                 <p>洗濯の品質と効率：ドラム式洗濯機は、洗濯物洗濯物をより効率的かつ効果的に洗うことができます。</p>
                 <p>回転するドラムによって洗濯物が均等に運ばれ、衣類と水のより良い接触が可能となります。</p>
                 <p>これにより、よりクリーンな洗濯結果を得ることができます。</p>
@@ -67,7 +67,7 @@
                 <p>均等に洗濯物を運ぶドラムと、効率的な洗濯サイクルにより、水の使用量と洗濯時間を最小限に抑えることができます。</p>
                 <p>また、一部のモデルはエネルギー効率の高いモーターや省エネルギーの機能を備えているため、電力消費も削減できます。</p>
                 <p>・縦型洗濯機（トップロード洗濯機）</p>
-                <img src="img/washing/tategata.jpg"class="samune">
+                <img src="../img/washing/tategata.jpg"class="samune">
                 <p>コンパクトなサイズ: 縦型洗濯機は、一般的にドラム洗濯機よりもコンパクトなサイズです。</p>
                 <p>そのため、限られたスペースや狭い場所に設置するのに適しています。小規模な住宅やアパートメント、狭い洗濯室などで特に便利です。
                 </p>
@@ -80,7 +80,7 @@
                 <p>操作のしやすさ: 縦型洗濯機は、操作パネルやコントロールが上部にあり、立ったまま操作できる場合があります。</p>
                 <p>背の高い人や腰痛のある人にとって、しゃがまずに操作できるのは利点です。</p>
                 <p>・二槽式洗濯機</p>
-                <img src="img/washing/nisousiki.jpg"class="samune">
+                <img src="../img/washing/nisousiki.jpg"class="samune">
                 <p>機能の分離: 二槽式洗濯機には洗濯と脱水の2つの槽があります。この分離された構造により、洗濯と脱水を同時に行う必要がありません。</p>
                 <p>洗濯が完了したら、衣類を別の槽に移動して脱水を行うことができます。このため、脱水中に新しい洗濯を始めることができ、時間を節約することができます。
                 </p>
@@ -93,7 +93,7 @@
                 <p>使いやすさ: 二槽式洗濯機は通常、簡単な操作パネルを備えています。洗濯と脱水の機能を独立して制御することができ、必要なプログラムや設定を選択することができます。</p>
                 <p>また、衣類の移動や取り出しも比較的容易であり、使い勝手が良いと言えます。</p>
                 <p>・洗濯乾燥機</p>
-                <img src="img/washing/kansouki.jpg"class="samune">
+                <img src="../img/washing/kansouki.jpg"class="samune">
                 <p>時間の節約: 洗濯乾燥機は、洗濯と乾燥を同じ機械で行うことができます。通常の洗濯機と比較して、洗濯物を別の機械に移す必要がないため、時間を節約することができます。</p>
                 <p>また、洗濯サイクルと乾燥サイクルを同時に実行できるため、乾燥にかかる時間も短縮されます。</p>
                 <p>スペースの節約: 洗濯乾燥機は、洗濯と乾燥の2つの機能を1つの機械で実現するため、スペースを節約することができます。</p>
@@ -191,7 +191,7 @@
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                         <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                         <div class="arti-1">
-                            <div><img src="img/sen.jpeg"></div>
+                            <div><img src="../img/sen.jpeg"></div>
                             <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
@@ -199,11 +199,11 @@
                             <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/uiui.jpg"></div>
+                            <div><img src="../img/uiui.jpg"></div>
                             <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/movie1/samune1.jpg"></div>
+                            <div><img src="../img/movie1/samune1.jpg"></div>
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
                 </div>
