--- a/webhome-3/html_folder/whisky.html
+++ b/webhome-3/html_folder/whisky.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="css_folder/whisky.css">
+        <link rel="stylesheet" href="../css_folder/whisky.css">
         <title>【飲みやすい！】初心者におすすめの2000円代ウイスキー 5選</title><!--1.タイトル-->
         <meta name="description" content="2023年最新! 初心者でも飲めるおすすめのウイスキーを5つ厳選しました! お酒を選ぶ時の参考にしてみてください!"><!--2.説明文-->
         <meta name="keywords" content="お酒, ウイスキー, アルコール, 20歳, 酒"><!--3.キーワード-->
-        <link rel="shortcut icon" href="img\Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="img\Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="img\Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
@@ -22,8 +22,8 @@
             </div>
             <div class="arti">
                 <h1>【飲みやすい！】初心者におすすめの2000円代ウイスキー 5選</h1>
-                <a href=index.html><img class="logo" src="img\Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
-                <img src="img/whi_samune.jpg"class="samune">
+                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <img src="../img/whi_samune.jpg"class="samune">
                 <p>※お酒は二十歳になってから。運転時、妊娠期などの飲酒も控えましょう。</p>
                 <br>
                 <br>
@@ -189,7 +189,7 @@
                 <h2 id="mo-6">まとめ</h2>
                 <br>
                 <br>
-                <img class="free_img" src="img/alcohol.jpg">
+                <img class="free_img" src="../img/alcohol.jpg">
                 <p>どうでしたか？今回は初心者におすすめのウイスキー5選を紹介しました！初めて飲む方にも手が出しやすいお値段のウイスキーを紹介しました。これからたくさんのウイスキーを買って飲んでも、飲みたくなるようなウイスキーたちですのでぜひ手に取って飲み比べをしてみてください！</p>
                 <br>
                 <br>
@@ -202,7 +202,7 @@
                         <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                         <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                         <div class="arti-1">
-                            <div><img src="img/sen.jpeg"></div>
+                            <div><img src="../img/sen.jpeg"></div>
                             <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                         </div>
                         <div class="arti-1">
@@ -210,11 +210,11 @@
                             <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/movie1/samune2.jpg"></div>
+                            <div><img src="../img/movie1/samune2.jpg"></div>
                             <div><h1><a href="movie2.html">週末に観るべき映画第2弾 5選!!</a></h1></div>
                         </div>
                         <div class="arti-1">
-                            <div><img src="img/movie1/samune1.jpg"></div>
+                            <div><img src="../img/movie1/samune1.jpg"></div>
                             <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                         </div>
                 </div>
