Co-authored-by: kensho0101 <taroa36912@users.noreply.github.com>

--- a/webhome-3/html_folder/OVEN.html
+++ b/webhome-3/html_folder/OVEN.html
@@ -22,7 +22,7 @@
       </div>
       <div class="arti">
         <h1>【2023年版】電子レンジで何を買えばいいのかわからない人は必見!!</h1>
-        <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
+        <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/14</p>
         <p>急ですがこの記事を見ているということは家電のことがあまり詳しくなかったり、</p>
         <p>一人暮らしや新生活を始めたけどどうすればいいのかわからない人が多いと思います。</p>
         <p>なのでそんな皆さんに今回はオススメの電子レンジの紹介をしたいと思います。</p>
