--- a/webhome-3/html_folder/ad.html
+++ b/webhome-3/html_folder/ad.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>広告掲載のご相談</h1>
-                <a href=index.html><img class="logo" src="../imgPac.png"></a><p class="open_day">公開日 2023/**/△△</p>
+                <a href=../index.html><img class="logo" src="../imgPac.png"></a><p class="open_day">公開日 2023/**/△△</p>
                 <p>ただいま作成中です</p>
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
