--- a/webhome-3/html_folder/company.html
+++ b/webhome-3/html_folder/company.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>運営会社</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
                 <h2>この会社について</h2>
                 <p>作成中です</p>
                 <h2 id="re-arti">関連記事</h2>
