--- a/webhome-3/html_folder/fan.html
+++ b/webhome-3/html_folder/fan.html
@@ -23,7 +23,7 @@
             </div>
             <div class="arti">
                 <h1>【2023年版】おすすめの手軽に持ち運べる省エネ扇風機5選!!!</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
                 <p>いよいよ気温も上がってきてきましたね...。今年は電気代も大幅に上がってしまったので、エアコンを気軽に使うことができない!そんな人におすすめな手持ち扇風機を5個紹介しちゃいますのでぜひ最後まで見てくれると嬉しいです!</p>
                 <div class="table">
                     <h1>もくじ</h1>
