--- a/webhome-3/html_folder/inquiry.html
+++ b/webhome-3/html_folder/inquiry.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>お問い合わせフォーム</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
                 <form action="mailsent.php" method="post">
                   <div class="Form">
                     <div class="Form-Item">
