--- a/webhome-3/html_folder/movie4.html
+++ b/webhome-3/html_folder/movie4.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="../css_folder/movie4.css"><!--css名変える-->
-        <title>おすすめ映画</title><!--1.タイトル-->
-        <meta name="description" content="sample"><!--2.説明文-->
-        <meta name="keywords" content="sample"><!--3.キーワード-->
+        <title>おすすめ映画5選 !!!</title><!--1.タイトル-->
+        <meta name="description" content="おすすめ映画を5つご紹介します。"><!--2.説明文-->
+        <meta name="keywords" content="映画, 夏, 冬"><!--3.キーワード-->
         <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
         <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
         <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
@@ -21,37 +21,41 @@
                 <iframe src="leftmenu.html" scrolling="no" frameborder="no"></iframe>
             </div>
             <div class="arti">
-                <h1>title</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/30</p>
-                <p>導入文</p>
+                <h1>全人類が感動できるであろう映画！！</h1>
+                <a href="../index.html"><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
+                <p>今回は全人類が感動できるであろう映画を5つ紹介します！</p>
+                <p>そもそも映画って感動できるものが多いですけどその中でも特に、僕が見て感動したなと印象に残った映画を紹介させていただきます。</p>
                 <div class="table">
                     <h1>もくじ</h1>
                     <ul>
-                        <a href="#mo-1"><li>目次１</li></a>
-                        <a href="#mo-2"><li>目次２</li></a>
-                        <a href="#mo-3"><li>目次３</li></a>
-                        <a href="#mo-4"><li>目次４</li></a>
-                        <a href="#mo-5"><li>目次５</li></a>
-                        <a href="#mo-6"><li>目次６</li></a>
+                        <a href="#mo-1"><li>【こんな夜更けにバナナかよ】</li></a>
+                        <a href="#mo-2"><li>【最強のふたり】</li></a>
+                        <a href="#mo-3"><li>だれでも皆、血は赤い【グリーンブック】</li></a>
+                        <a href="#mo-4"><li>ばか真面目なやつは音楽をやれ！【異動辞令は音楽隊！】</li></a>
+                        <a href="#mo-5"><li>カレンダーをめくる。命は巡る。【僕のワンダフル・ライフ】</li></a>
                         <a href="#mo-7"><li>まとめ</li></a>
                         <a href="#re-arti"><li>関連記事</li></a>
                     </ul>
                 </div>
-                <h2 id="mo-1">目次１</h2>
+                <h2 id="mo-1">難病の男の周りで起こる愛しき実話【こんな夜更けにバナナかよ】</h2>
                 <!--一つ目の項目--><!--小見出しはh3、その他はp-->
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-2">目次２</h2>
+                <h3>難病の男の周りで起こる愛しき実話</h3>
+                <img class="samune" src="../img/movie4/こんな夜更けにバナナかよ.jpeg">
+                <h2 id="mo-2">差別よ。クソ喰らえ【最強のふたり】</h2>
+                <h3>差別よ。クソ喰らえ</h3>
+                <img class="samune" src="../img/movie4/最強の2人.jpeg">
                 <!--二つ目の項目-->
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-3">目次３</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-4">目次４</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-5">目次５</h2>
-                <a href="#" class="link">楽天市場で見る   ></a>
-                <h2 id="mo-6">目次６</h2>
+                <h2 id="mo-3">だれでも皆、血は赤い【グリーンブック】</h2>
+                <h3>だれでも皆、血は赤い</h3> 
+                <img class="samune" src="../img/movie4/グリーンブック.png">
+                <h2 id="mo-4">ばか真面目なやつは音楽をやれ！【異動辞令は音楽隊！】</h2>
+                <h3>ばか真面目なやつは音楽をやれ！</h3>
+                <img class="samune" src="../img/movie4/異動辞令は音楽隊.jpeg">
+                <h2 id="mo-5">カレンダーをめくる。命は巡る。【僕のワンダフル・ライフ】</h2>
+                <h3>カレンダーをめくる。命は巡る。</h3>
+                <img class="samune" src="../img/movie4/僕のワンダフル・ライフ.jpeg">
                 <h2 id="mo-7">まとめ</h2>
-                <img class="free_img" src="#">
+                <img class="samune" src="../img/movie1/samune1.jpg">
                 <h2 id="re-arti">関連記事</h2>
                 <div class="arti-list">
                     <a href="https://px.a8.net/svt/ejp?a8mat=3TF708+C3TBLE+348+6O9OX" rel="nofollow">
