--- a/webhome-3/html_folder/washing.html
+++ b/webhome-3/html_folder/washing.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>【2023年版】洗濯機で何を買えばいいのかわからない人は必見!!</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
                 <p>夏になるとみんな汗かきますし、ムシムシとした暑さが続くので汗の匂いなどもあるしお布団とかも汗まみれになって何回も洗濯回しちゃいますよね。</p>
                 <p>なので1年を通して夏は人が最も洗濯機を回す季節なんです!</p>
                 <p>しかしそう簡単に買えるものでもないし買い換えるものでもないですよね。</p>
