--- a/webhome-3/html_folder/whisky.html
+++ b/webhome-3/html_folder/whisky.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>【飲みやすい！】初心者におすすめの2000円代ウイスキー 5選</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
                 <img src="../img/whi_samune.jpg"class="samune">
                 <p>※お酒は二十歳になってから。運転時、妊娠期などの飲酒も控えましょう。</p>
                 <br>
