--- a/webhome-3/index.html
+++ b/webhome-3/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="../css_folder/home.css">
+        <link rel="stylesheet" href="css_folder/home.css">
         <title>日常・趣味・便利グッズ紹介サイト</title>
         <meta name="description" content="今流行りの映画やアニメ、便利な日用品、受験勉強用の教材について紹介しています！">
         <meta name="keywords" content="映画, アニメ, 日用品, 参考書, 日常, 参政党">
-        <link rel="shortcut icon" href="../img/Pac.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="../img/Pac.png" sizes="180x180">
-        <link rel="icon" type="image/png" href="../img/Pac.png" sizes="192x192">
+        <link rel="shortcut icon" href="img/Pac.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="img/Pac.png" sizes="180x180">
+        <link rel="icon" type="image/png" href="img/Pac.png" sizes="192x192">
     </head>
     <body>
     <div class="wrap">
@@ -18,15 +18,15 @@
         </header>
         <div class="main-arti">
             <div class="main1">
-                <img src="../img/sen.jpeg">
+                <img src="img/sen.jpeg">
                 <h1><a href="fan.html">おすすめ扇風機5選!!!</a></h1>
             </div>
             <div class="main2">
-                <img src="../img/uiui.jpg">
+                <img src="img/uiui.jpg">
                 <h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1>
             </div>
             <div class="main3">
-                <img src="../img/sen.jpg">
+                <img src="img/sen.jpg">
                 <h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1>
             </div>
         </div>
@@ -39,7 +39,7 @@
                 <img border="0" width="468" height="60" alt="" src="https://www24.a8.net/svt/bgt?aid=230816312732&wid=001&eno=01&mid=s00000000404001121000&mc=1"></a>
                 <img border="0" width="1" height="1" src="https://www14.a8.net/0.gif?a8mat=3TF708+C3TBLE+348+6O9OX" alt="">
                 <div class="arti-1">
-                    <div><img src="../img/sen.jpeg"></div>
+                    <div><img src="img/sen.jpeg"></div>
                     <div><h1><a href="fan.html">おすすめ扇風機10選!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
@@ -47,11 +47,11 @@
                     <div><a><img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3TF707+J1W4Y+2990+6B70I" alt=""></a></div>
                 </div>
                 <div class="arti-1">
-                    <div><img src="../img/uiui.jpg"></div>
+                    <div><img src="img/uiui.jpg"></div>
                     <div><h1><a href="whisky.html">おすすめウイスキー5選!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
-                    <div><img src="../img/movie1/samune1.jpg"></div>
+                    <div><img src="img/movie1/samune1.jpg"></div>
                     <div><h1><a href="movie1.html">おすすめ映画5選!!!</a></h1></div>
                 </div>
                 <a href="https://px.a8.net/svt/ejp?a8mat=3T22ZC+2HWH4I+50+2HK8J5" rel="nofollow">
@@ -61,11 +61,11 @@
                     <img border="0" width="100" height="60" alt="" src="https://www22.a8.net/svt/bgt?aid=230814277174&wid=001&eno=01&mid=s00000015695005014000&mc=1"></a>
                     <img border="0" width="1" height="1" src="https://www15.a8.net/0.gif?a8mat=3TF5FP+2VLG1E+3D3Q+TUO9T" alt="">
                 <div class="arti-1">
-                    <div><img src="../img/movie1/samune2.jpg"></div>
+                    <div><img src="img/movie1/samune2.jpg"></div>
                     <div><h1><a href="movie2.html">おすすめ映画5選第2弾!!!</a></h1></div>
                 </div>
                 <div class="arti-1">
-                    <div><img src="../img/sen.jpg"></div>
+                    <div><img src="img/sen.jpg"></div>
                     <div><h1><a href="washing.html">おすすめ洗濯機5選!!!</a></h1></div>
                 </div>
                 <div class="ad-1">
