--- a/webhome-3/html_folder/DRR.html
+++ b/webhome-3/html_folder/DRR.html
@@ -22,7 +22,7 @@
             </div>
             <div class="art">
                 <h1>【2023年度版】最新のおすすめ防災グッズ！！</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/20</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/20</p>
                 <p>最近、色々物騒ですよね。。。</p>
                 <p>南海トラフ地震が来るのではないかと言われていたり、異常気象による豪雨に豪雨や土砂災害など何かと身近に危険が迫っていますよね！？</p>
                 <p>そんなときのために備えておく必要がありますよね！？家族や大切な人、自分を守るためにとても必要なことだと思います。</p>
