--- a/webhome-3/html_folder/header.html
+++ b/webhome-3/html_folder/header.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css_folder/header.css">
 </head>
 <body>
-    <a href="index.html" target="_top">
+    <a href="../index.html" target="_top">
         <img src="../img/Pac.png">
     </a>
     <h1>
