--- a/webhome-3/html_folder/logo.html
+++ b/webhome-3/html_folder/logo.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>ロゴ / バナー</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/**/△△</p>
                 <h2>ロゴについて</h2>
                 <img class="logo2" src="../img/Pac.png">
                 <h2 id="re-arti">関連記事</h2>
