--- a/webhome-3/html_folder/movie1.html
+++ b/webhome-3/html_folder/movie1.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>週末に観るべき映画 5選!!</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
                 <img src="../img/movie1/samune1.jpg" class="samune">
                 <p>みなさん月火水木金と過ごして日々疲れていると思います。</p>
                 <p>もしかしたら土日出勤している方もいらっしゃるとは思いますがどんな人でも普通に働いていたら休日があります。</p>
