--- a/webhome-3/html_folder/movie2.html
+++ b/webhome-3/html_folder/movie2.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>週末に観るべき映画第2弾 5選!!</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/08/08</p>
                 <img src="../img/movie1/samune1.jpg" class="samune2">
                 <p>現在巷で有名である広告などが一切ない『君たちはどう生きるか』みなさんご覧になりましたか？</p>
                 <p>僕自身もいまだに見れていないので期間中に絶対見に行きたいと思っています。</p>
