--- a/webhome-3/html_folder/private.html
+++ b/webhome-3/html_folder/private.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>プライバシーポリシー</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/30</p>
                 <h2 id="mo-1">【Pacture】 プライバシーポリシー</h2>
                 <p>Pacture（以下,「当社」といいます。）は,本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。</p>
                 <h3 id="mo-2">第1条（個人情報）</h3>
