--- a/webhome-3/html_folder/terms.html
+++ b/webhome-3/html_folder/terms.html
@@ -22,7 +22,7 @@
             </div>
             <div class="arti">
                 <h1>利用規約</h1>
-                <a href=index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/26</p>
+                <a href=../index.html><img class="logo" src="../img/Pac.png"></a><p class="open_day">公開日 2023/09/26</p>
                 <h2 id="mo-1">【Pacture】利用規約</h2>
                 <!--一つ目の項目--><!--小見出しはh3、その他はp-->
                 <p>この利用規約（以下,「本規約」といいます。）は, Pacture（以下, 「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
